# aura-browser

./: .flatpak-manifest.json  .kde-ci.yml  CMakeLists.txt  LICENSE  README.md  org.kde.invent.aura_browser.metainfo.xml
.reuse/: dep5
app/: CMakeLists.txt  Messages.sh  main.cpp  org.aura.browser.desktop.cmake  org.kde.aura-browser.desktop.cmake  qml.qrc
app/plugins/: audiorecorder.cpp  audiorecorder.h  globalSettings.cpp  globalSettings.h  keyfilter.cpp  keyfilter.h  virtualKeypress.cpp  virtualKeypress.h  virtualMouse.cpp  virtualMouse.h
app/qml/: AudioBox.qml  BookmarkManager.qml  DownloadRequest.qml  FeatureRequest.qml  HelpTab.qml  HistoryManager.qml  InputLoader.qml  LocalURLSearchHandler.qml  MycroftInput.qml  NavigationSoundEffects.qml  RequestHandler.qml  SandboxLoader.qml  SettingsTab.qml  StartPage.qml  SuggestionsBox.qml  SuggestionsLogic.qml  TopBar.qml  TopBarSandbox.qml  UrlEntryBox.qml  WebLoader.qml  main.qml  mainSandbox.qml
app/qml/code/: BookmarkStorage.js  RecentStorage.js  Utils.js  qwebchannel.js  qwebinput.js
app/qml/delegates/: BookmarkDelegate.qml  RecentDelegate.qml  TabDelegate.qml
app/qml/views/: LabelView.qml  TileView.qml  TileViewGrid.qml  TileViewTabs.qml
icons/: CMakeLists.txt
po/ar/: aura-browser.po
po/ast/: aura-browser.po
po/ca/: aura-browser.po
po/ca@valencia/: aura-browser.po
po/cs/: aura-browser.po
po/de/: aura-browser.po
po/en_GB/: aura-browser.po
po/eo/: aura-browser.po
po/es/: aura-browser.po
po/eu/: aura-browser.po
po/fi/: aura-browser.po
po/fr/: aura-browser.po
po/ga/: aura-browser.po
po/gl/: aura-browser.po
po/he/: aura-browser.po
po/hi/: aura-browser.po
po/ia/: aura-browser.po
po/it/: aura-browser.po
po/ja/: aura-browser.po
po/ka/: aura-browser.po
po/ko/: aura-browser.po
po/lt/: aura-browser.po
po/lv/: aura-browser.po
po/nl/: aura-browser.po
po/pl/: aura-browser.po
po/pt/: aura-browser.po
po/pt_BR/: aura-browser.po
po/ru/: aura-browser.po
po/sa/: aura-browser.po
po/sk/: aura-browser.po
po/sl/: aura-browser.po
po/sv/: aura-browser.po
po/tr/: aura-browser.po
po/ug/: aura-browser.po
po/uk/: aura-browser.po
po/zh_CN/: aura-browser.po
po/zh_TW/: aura-browser.po
